--- a/app/src/main/res/layout/app_bar_main_window.xml
+++ b/app/src/main/res/layout/app_bar_main_window.xml
@@ -19,7 +19,11 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"
             />
 
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </SearchView>
         <EditText
             android:id="@+id/search"
             android:layout_width="336dp"
