--- a/app/src/main/res/layout/app_bar_main_window.xml
+++ b/app/src/main/res/layout/app_bar_main_window.xml
@@ -17,35 +17,26 @@
             android:layout_height="match_parent"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            />
+            >
+
+
+        </android.support.v7.widget.Toolbar>
 
         <SearchView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </SearchView>
-        <EditText
             android:id="@+id/search"
-            android:layout_width="336dp"
-            android:layout_height="40dp"
-            android:layout_below="@+id/imageView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="22dp"
-            android:drawableLeft="@android:drawable/ic_menu_search"
-            android:hint="What would you like to buy?"
-            android:inputType="text"
-            android:shadowColor="@android:color/white"
-            android:textColorHighlight="@android:color/white"
-            android:textColorLink="?android:attr/colorEdgeEffect"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:clickable="true"
-            android:cursorVisible="false"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
+            android:visibility="visible"
+            android:layout_below="@+id/toolbar"
+            android:iconifiedByDefault="false"
+            android:queryHint="What would you like to buy?"
+            />
 
-            android:textSize="17dp" />
 
 
     </android.support.design.widget.AppBarLayout>
+
 
     <include
         android:id="@+id/include"
