--- a/app/src/main/res/layout/content_main_window.xml
+++ b/app/src/main/res/layout/content_main_window.xml
@@ -15,11 +15,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
+            <GridView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="3"
+                android:id="@+id/searchGrid"
+                android:visibility="gone"></GridView>
 
             <GridView
                 android:id="@+id/basket"
