--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -13,6 +13,29 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/tomato" />
 
+
+    <TextView
+        android:id="@+id/character"
+        android:layout_width="57dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/asap"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@android:color/background_dark"
+        android:textSize="75dp" />
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_alignBottom="@+id/imageView1"
+        android:layout_centerHorizontal="true"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="18dp" />
     <TextView
         android:id="@+id/quantity"
         android:layout_width="100dp"
